# Quantum-Enhanced-CKKS-Encrypted-Forensic-NLP

./: .gitignore  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  demo-artifacts.yml  docs.yml
data/samples/: synthetic.csv
docs/: _config.yml  getting-started.md  index.md
scripts/: examples_report.py  generate_dataset.py  report.py  run_experiments.py  train.py
src/qhe_forensic_nlp/: __init__.py  data.py  embeddings.py  eval.py  preprocess.py  utils.py
src/qhe_forensic_nlp/models/: __init__.py  baseline.py  he_linear.py  quantum_vqc.py  random_forest.py  svm.py
tests/: test_models.py  test_smoke.py
